# projects

./: pico_micro_ros_example.cppRGB  toto_ai.txt
micro_ros_raspberrypi_pico_sdk/: CHANGELOG.rst  CMakeLists.txt  README.md  built_packages  pico_micro_ros_example.cppOk
micro_ros_raspberrypi_pico_sdk/.github/workflows/: library_generation.yml
micro_ros_raspberrypi_pico_sdk/src/: buzzer.cpp  joystick.cpp  ldr.cpp  relay.cpp  rgb.cpp  rtc.cpp  segment7.cpp  stepper.cpp  ultrasonic.cpp  water_sensor.cpp
micro_ros_raspberrypi_pico_sdk/src/toto/DHT11/: DHT11.txt
micro_ros_raspberrypi_pico_sdk/src/toto/Joystick/: joystick.txt  joystick1.txt  joystick2.txt
micro_ros_raspberrypi_pico_sdk/src/toto/LCD/: LCD_from_LED.txt
micro_ros_raspberrypi_pico_sdk/src/toto/Ultrasonic/: Ultrasonic.txt
micro_ros_raspberrypi_pico_sdk/src/toto/buzzer/: buzzer.txt
micro_ros_raspberrypi_pico_sdk/src/toto/segment7_4.cpp_txt/: segment7_4.cpp_txt.txt
ros2_ws/src/otto_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/otto_robot/otto_robot/: button_tester.py  buzzer_control_gui.py  closs_example.py  dht_control_gui.py  joystick_control_gui.py  layout.py  lcd_control_gui.py  ldr_control_gui.py  led_control_gui.py  potentiometer_control_gui.py  relay_control_gui.py  rfid_control_gui.py  rgba_control_gui.py  rtc_control_gui.py  segment7_4_control_gui.py  segment7_control_gui.py  servo_control_gui.py  stepper_control_gui.py  ultrasonic_control_gui.py
toto/micro_ros_raspberrypi_pico_sdk/: CMakeLists.txt  available_ros2_types  button_test.cpp  package.xml  pico_uart_transports.h
toto/micro_ros_raspberrypi_pico_sdk/.github/workflows/: ci.yml
toto/micro_ros_raspberrypi_pico_sdk/lib/LiquidCrystal_I2C/: CMakeLists.txt  LiquidCrystal_I2C.cmake  LiquidCrystal_I2C.h
toto/micro_ros_raspberrypi_pico_sdk/microros_static_library/library_generation/: library_generation.sh
toto/micro_ros_raspberrypi_pico_sdk/src/: lcd.cpp  led.cpp  pico_micro_ros_example.cpp  potentiometer.cpp  segment7.txt  segment7_4.cpp  servo.cpp
toto/micro_ros_raspberrypi_pico_sdk/src/toto/DHT11/: DHT11_add_lib.txt
toto/micro_ros_raspberrypi_pico_sdk/src/toto/LCD/: LCD.txt
toto/micro_ros_raspberrypi_pico_sdk/src/toto/Potentiometer/: Potentiometer.txt
toto/micro_ros_raspberrypi_pico_sdk/src/toto/buzzer/: buzzer.txt
toto/micro_ros_raspberrypi_pico_sdk/src/toto/segment7_4.cpp_txt/: from_net.txt  test.txt
toto/micro_ros_raspberrypi_pico_sdk/src/toto/servo/: servo.txt
toto/micro_ros_raspberrypi_pico_sdk/src/toto/stepper/: stepper.txt
